--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "./src/main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder ."
+    "build": "electron-builder --dir"
   },
   "devDependencies": {
     "electron": "^13.1.7",
+    "electron-builder": "^22.14.13",
     "electron-packager": "^15.4.0"
   },
   "dependencies": {
